Started Migration to Next JS 13 app
- Moved home page to app directory
- Supplied partial layout for app including favicon and title
- Indicated Client components for pre-existing components.

--- a/jfarms/app/tsconfig.json
+++ b/jfarms/app/tsconfig.json
@@ -16,13 +16,20 @@
     "incremental": true,
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "src/app/setupTesting.ts"
-, "src/app/App.test.js"  ],
+    "src/rootApp/setupTesting.ts",
+    "src/rootApp/rootApp.test.js",
+    ".next/types/**/*.ts"
+  ],
   "exclude": ["node_modules"]
 }
