--- a/jfarms/app/tsconfig.json
+++ b/jfarms/app/tsconfig.json
@@ -16,7 +16,8 @@
     "incremental": true,
     "paths": {
       "@/*": ["./src/*"],
-      "r/*": ["./*"]
+      "r/*": ["./*"],
+      "p/*": ["./public/*"]
     },
     "plugins": [
       {
